quic: add support for in-kernel QUIC
After installing in-kernel QUIC from:

  https://github.com/lxin/quic/

Start sever:

  # iperf3 -s --pkey /tmp/quic/tests/keys/server-key.pem \
              --cert /tmp/quic/tests/keys/server-cert.pem

Start client:

  # iperf3 -c ::1 --quic

  Connecting to host ::1, port 5201
  [  5] local ::1 port 45561 connected to ::1 port 5201
  [ ID] Interval           Transfer     Bitrate
  [  5]   0.00-1.00   sec   589 MBytes  4.94 Gbits/sec
  [  5]   1.00-2.00   sec   628 MBytes  5.26 Gbits/sec
  [  5]   2.00-3.00   sec   545 MBytes  4.57 Gbits/sec
  [  5]   3.00-4.00   sec   648 MBytes  5.43 Gbits/sec
  [  5]   4.00-5.00   sec   613 MBytes  5.14 Gbits/sec
  [  5]   5.00-6.00   sec   654 MBytes  5.49 Gbits/sec
  [  5]   6.00-7.00   sec   581 MBytes  4.87 Gbits/sec
  [  5]   7.00-8.00   sec   547 MBytes  4.59 Gbits/sec
  [  5]   8.00-9.00   sec   623 MBytes  5.23 Gbits/sec
  [  5]   9.00-10.00  sec   477 MBytes  4.00 Gbits/sec
  - - - - - - - - - - - - - - - - - - - - - - - - -
  [ ID] Interval           Transfer     Bitrate
  [  5]   0.00-10.00  sec  5.77 GBytes  4.95 Gbits/sec   sender
  [  5]   0.00-10.00  sec  5.77 GBytes  4.95 Gbits/sec   receiver

  iperf Done.

Signed-off-by: Xin Long <lucien.xin@gmail.com>

--- a/src/iperf3.1
+++ b/src/iperf3.1
@@ -257,6 +257,9 @@ Note that a percent sign and interface device name are required for IPv6 link-lo
 .BR --sctp
 use SCTP rather than TCP (FreeBSD and Linux)
 .TP
+.BR --quic
+use QUIC rather than TCP (Linux)
+.TP
 .BR -u ", " --udp
 use UDP rather than TCP
 .TP
